Fix styles and added java doc